--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
     <button id="getText">Get Text</button>
     <button id="getUsers">Get Users</button>
     <button id="getPosts">Get API Data</button>
+    <hr />
     <div id="output"></div>
+    <form id="addPost">
+      <div>
+        <input type="text" id="title" placeholder="Title" />
+        <textarea id="body" placeholder="Body"></textarea>
+        <input type="submit" value="submit" />
+      </div>
+    </form>
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
